--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         go-version: '1.21'
 
-    - name: Build
-      run: go build -v -o build ./...
+    # - name: Build
+    #   run: go build -v -o build ./...
 
     - name: Test
       run: go test -v ./...
